oc_manifests/example-app1/s2i-strategy/my-app-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: my-app-deploy
  namespace: testing-workspace
  labels:
    app: my-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-deploy
  template:
    metadata:
      labels:
        app: my-app-deploy
        deployment: my-app-deploy
    spec:
      containers:
        - name: my-app-deploy
          image: >-
            image-registry.openshift-image-registry.svc:5000/testing-workspace/my-app:latest
          ports:
            - containerPort: 8081
              protocol: TCP
          imagePullPolicy: Always
      restartPolicy: Always
  strategy:
    type: RollingUpdate
