oc_manifests/example-app1/s2i-strategy/my-app-service-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service-deploy
spec:
  selector:
    app: my-app-deploy
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
