oc_manifests/example-app1/s2i-strategy/my-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-app-route
spec:
  to:
    kind: Service
    name: my-app-service
